--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "openai": "^5.20.2",
     "socket.io": "^4.8.1"
   }
